@@ -81,7 +81,7 @@ INSTALLED_APPS = [
     'allauth',
     'allauth.account',
     'allauth.socialaccount',
-    'allauth.socialaccount.providers.google', # for Google OAuth 2.0
+    # 'allauth.socialaccount.providers.google', # for Google OAuth 2.0
     'vast_auth2',
 
 
@@ -287,6 +287,8 @@ SOCIALACCOUNT_QUERY_EMAIL = True
 ACCOUNT_LOGOUT_ON_GET= True
 ACCOUNT_UNIQUE_EMAIL = True
 ACCOUNT_EMAIL_REQUIRED = True
+#ACCOUNT_EMAIL_VERIFICATION = "mandatory"
+SOCIALACCOUNT_ADAPTER = 'vast_auth2.adapter.VASTAuth2SocialAccountAdapter'
 
 SOCIALACCOUNT_PROVIDERS = {
     'vastauth2': {
