@@ -1,0 +1,84 @@
+# Generated by Django 4.1.3 on 2022-12-04 14:15
+
+from django.db import migrations, models
+import django.utils.timezone
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('clarin_backend', '0009_documents_data_file_documents_data_url'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='buttonannotators',
+            name='created_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='created_at'),
+        ),
+        migrations.AlterField(
+            model_name='buttonannotators',
+            name='updated_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='updated_at'),
+        ),
+        migrations.AlterField(
+            model_name='collections',
+            name='created_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='created_at'),
+        ),
+        migrations.AlterField(
+            model_name='collections',
+            name='updated_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='updated_at'),
+        ),
+        migrations.AlterField(
+            model_name='coreferenceannotators',
+            name='created_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='created_at'),
+        ),
+        migrations.AlterField(
+            model_name='coreferenceannotators',
+            name='updated_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='updated_at'),
+        ),
+        migrations.AlterField(
+            model_name='documents',
+            name='created_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='created_at'),
+        ),
+        migrations.AlterField(
+            model_name='documents',
+            name='updated_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='updated_at'),
+        ),
+        migrations.AlterField(
+            model_name='opendocuments',
+            name='created_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='created_at'),
+        ),
+        migrations.AlterField(
+            model_name='opendocuments',
+            name='updated_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='updated_at'),
+        ),
+        migrations.AlterField(
+            model_name='sharedcollections',
+            name='created_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='created_at'),
+        ),
+        migrations.AlterField(
+            model_name='sharedcollections',
+            name='updated_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='updated_at'),
+        ),
+        migrations.AlterField(
+            model_name='users',
+            name='created_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='created_at'),
+        ),
+        migrations.AlterField(
+            model_name='users',
+            name='updated_at',
+            field=models.DateTimeField(default=django.utils.timezone.now, verbose_name='updated_at'),
+        ),
+    ]
